[gd_scene load_steps=5 format=3 uid="uid://b267yjtve5jh4"]

[ext_resource type="Script" path="res://minigames/minigame4.gd" id="1_vofbs"]
[ext_resource type="Texture2D" uid="uid://cxmlxedplk5mt" path="res://sprites/Clock.png" id="2_bt6aw"]
[ext_resource type="Texture2D" uid="uid://c0yhlpjgbsmoj" path="res://sprites/Clock(1).png" id="3_g7vof"]
[ext_resource type="Texture2D" uid="uid://b7urxxa826ag4" path="res://sprites/IMG_0570.PNG" id="4_h0c0r"]

[node name="minigame4" type="Node2D"]
script = ExtResource("1_vofbs")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1271.0
offset_bottom = 682.0
color = Color(0.784314, 0.588235, 0.282353, 1)

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="."]
offset_left = 400.0
offset_top = 325.0
offset_right = 400.0
offset_bottom = 325.0
scale = Vector2(0.4, 0.4)

[node name="clock" type="Sprite2D" parent="AspectRatioContainer"]
texture = ExtResource("2_bt6aw")

[node name="minuteHand" type="Sprite2D" parent="AspectRatioContainer"]
position = Vector2(-3.05176e-05, 6.10352e-05)
scale = Vector2(1.31982, 1.56104)
texture = ExtResource("3_g7vof")

[node name="hourHand" type="Sprite2D" parent="AspectRatioContainer"]
rotation = 6.28319
texture = ExtResource("3_g7vof")

[node name="TextureRect" type="TextureRect" parent="AspectRatioContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="."]
offset_left = 776.0
offset_top = 72.0
offset_right = 849.0
offset_bottom = 126.0
scale = Vector2(5, 5)
theme_override_font_sizes/font_size = 50

[node name="Button" type="TextureButton" parent="."]
offset_left = 810.0
offset_top = -29.0
offset_right = 2970.0
offset_bottom = 1591.0
scale = Vector2(0.15, 0.5)
texture_normal = ExtResource("4_h0c0r")

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
